[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mywidgets"
version = "0.1.0"
description = "Fluent-style PySide6 widgets for desktop applications."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "zhuangjinpo06" }
]
keywords = ["pyside6", "qt", "widgets", "fluent", "desktop-ui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Qt",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "PySide6>=6.6",
    "QtAwesome>=1.3",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/zhuangjinpo06/mywidgets"
Repository = "https://github.com/zhuangjinpo06/mywidgets"
Issues = "https://github.com/zhuangjinpo06/mywidgets/issues"
Documentation = "https://github.com/zhuangjinpo06/mywidgets/blob/main/mywidgets/USAGE.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mywidgets*"]
exclude = ["examples*", "tests*"]

[tool.setuptools.package-data]
mywidgets = ["USAGE.md", "requirements.txt"]
